[tool.poetry]
name = "home"
version = "0.1.0"
description = "Diving an software architecture with VueJS, Django, Docker and others."
authors = ["jricci1 <joaquin.ricci@thenotcompany.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
