[tool.poetry]
name = "home"
version = "0.1.0"
description = "Diving an software architecture with VueJS, Django, Docker and others."
authors = ["jricci1 <joaquin.ricci@thenotcompany.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pylint = "^2.8.3"
black = "^21.6b0"
isort = "^5.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
